Integrate New Icon Serif and Script fonts

--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
 
+/* Custom font faces for New Icon fonts */
+@font-face {
+  font-family: 'New Icon Serif';
+  src: url('/New-Icon-Serif.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'New Icon Script';
+  src: url('/New-Icon-Script.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -34,6 +51,15 @@ body {
 
 .script-font {
   font-family: 'Dancing Script', cursive;
+}
+
+/* New custom font classes */
+.new-icon-serif {
+  font-family: 'New Icon Serif', 'Playfair Display', serif;
+}
+
+.new-icon-script {
+  font-family: 'New Icon Script', 'Dancing Script', cursive;
 }
 
 /* Custom color utilities */
